--- a/BellyButtonChallenge/index.html
+++ b/BellyButtonChallenge/index.html
@@ -10,13 +10,13 @@
   <link rel ="stylesheet" href="static/css/style.css">
 </head>
 
-<body>
+<body style="background-color:grey;">
 
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h1 style="color:red">Belly Button Biodiversity Dashboard</h1>
+        <p style="color:red">Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
@@ -34,7 +34,8 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar"></div>
+        <div id="bar">
+        </div>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
@@ -49,7 +50,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="plots.js"></script>
+  <script src="charts.js"></script>
 
 </body>
 
